fix: dark mode polish

--- a/src/Banner/_Banner.sass
+++ b/src/Banner/_Banner.sass
@@ -10,7 +10,7 @@
 		line-height: 18px
 
 	@at-root .SettingsPane_Content &
-		margin-top: -11px
+		margin: -34px 0 20px
 
 	@include selectable
 
