--- a/src/FlyModal/_FlyModal.sass
+++ b/src/FlyModal/_FlyModal.sass
@@ -115,7 +115,7 @@
 			color: $green
 
 	.MessageAboveButton
-		color: $gray
+		@include theme-color-gray-else-gray25
 		margin: 30px 0
 
 	.FormRow + .Checkbox
